--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Hero from "../components/home/hero/Index.astro";
+import Layout from "../layouts/Layout.astro";
+import WhoWeAre from "../components/home/who-we-are/Index.astro";
+import Services from "../components/home/services/Index.astro";
+import Blogs from "../components/home/Blogs.astro";
 ---
 
 <Layout>
-	<Welcome />
+  <Hero />
+  <WhoWeAre />
+  <Services />
+  <Blogs />
 </Layout>
