✨ feat(blog): create blog page with article list
- add new blog page with breadcrumbs navigation
- implement article component for displaying blog posts
- include blog images and layout for article list

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -12,7 +12,7 @@ const { image } = Astro.props;
     loading="eager"
     width={410}
     height={360}
-    class="w-102.5 h-90 object-cover mx-auto"
+    class="object-cover w-full h-90 max-lg:mx-auto"
   />
   <h6
     class="uppercase text-[#A2A6CA] text-sm leading-4 font-medium tracking-[15%] mt-5 mb-3"
