--- a/src/components/home/Blogs.astro
+++ b/src/components/home/Blogs.astro
@@ -9,7 +9,7 @@ import Blog from "../Blog.astro";
       BLOGS
     </h2>
   </div>
-  <div class="grid lg:grid-cols-3 gap-9">
+  <div class="grid lg:grid-cols-3 gap-x-9 gap-y-12.5">
     <Blog image="/src/assets/blog-1.jpg" />
     <Blog image="/src/assets/blog-2.jpg" />
     <Blog image="/src/assets/blog-3.jpg" />
