--- a/src/components/layouts/Footer.astro
+++ b/src/components/layouts/Footer.astro
@@ -41,7 +41,7 @@ const year = new Date().getFullYear();
         </li>
       </ul>
     </div>
-    <hr class="w-full mt-7.5 mb-9 border-[#ACB1C4] border-[1px] rounded-xs" />
+    <hr class="w-full mt-7.5 mb-9 bg-[#ACB1C4] h-px border-0 rounded-xs" />
     <div
       class="flex items-center justify-between max-md:flex-col max-md:gap-y-4"
     >
