--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import TopBar from "../components/layouts/TopBar.astro";
 import Footer from "../components/layouts/Footer.astro";
 import "swiper/css/bundle";
 import "/src/styles/global.css";
+import Navbar from "../components/layouts/Navbar.astro";
 
 interface Props {
   title?: string;
@@ -22,6 +23,9 @@ const { title = "Allstream" } = Astro.props;
   </head>
   <body>
     <TopBar />
+    <template x-data x-if="window.location.pathname !== '/'">
+      <Navbar />
+    </template>
     <slot />
     <Footer />
   </body>
