✨ feat(pages): create contact page
- add contact page with contact information and a google maps embed
- create header component for title and breadcrumbs
- create new assets for contact page
- update navbar links to point to new pages

--- a/src/components/home/hero/Navbar.astro
+++ b/src/components/home/hero/Navbar.astro
@@ -60,7 +60,7 @@ import chevronDownDark from "/src/assets/chevron-down-dark.svg";
         </li>
         <li>
           <a
-            href="#"
+            href="/blog"
             class="text-xl leading-none uppercase lg:text-white hover:text-white hover:bg-transparent"
           >
             BLOG
@@ -68,7 +68,7 @@ import chevronDownDark from "/src/assets/chevron-down-dark.svg";
         </li>
         <li>
           <a
-            href="#"
+            href="/contact"
             class="text-xl leading-none uppercase lg:text-white hover:text-white hover:bg-transparent"
           >
             CONTACT
