--- a/src/components/layouts/Navbar.astro
+++ b/src/components/layouts/Navbar.astro
@@ -59,7 +59,7 @@ import chevronDownDark from "/src/assets/chevron-down-dark.svg";
         </li>
         <li>
           <a
-            href="#"
+            href="/blog"
             class="text-xl leading-none uppercase hover:bg-transparent"
           >
             BLOG
@@ -67,7 +67,7 @@ import chevronDownDark from "/src/assets/chevron-down-dark.svg";
         </li>
         <li>
           <a
-            href="#"
+            href="/contact"
             class="text-xl leading-none uppercase hover:bg-transparent"
           >
             CONTACT
