✨ feat(about): create about us page with content and images
- add new about page with two sections
- include images and placeholder text for each section
- update navbar to link to the new about page

--- a/src/components/home/hero/Navbar.astro
+++ b/src/components/home/hero/Navbar.astro
@@ -44,7 +44,7 @@ import chevronDownDark from "/src/assets/chevron-down-dark.svg";
       >
         <li>
           <a
-            href="#"
+            href="/about"
             class="text-xl leading-none uppercase lg:text-white hover:text-white hover:bg-transparent"
           >
             ABOUT US
