✨ feat(blog): create blog article page
- add new article page with title, content, and social sharing
- include related blogs section for further reading

♻️ refactor(blog): update blog component and home blogs section

- change blog link to article page
- extract title component for reuse
- replace title html in Blogs.astro with Title component

--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -5,7 +5,7 @@ import arrow from "/src/assets/arrow-right.svg";
 const { image } = Astro.props;
 ---
 
-<a href="#">
+<a href="/article">
   <Image
     src={image}
     alt="Blog"
