--- a/src/components/layouts/Header.astro
+++ b/src/components/layouts/Header.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props;
   <nav class="breadcrumbs">
     <ul>
       <li>
-        <a href="#" class="text-sm text-[#AEAEAE] leading-5 font-light">
+        <a href="/" class="text-sm text-[#AEAEAE] leading-5 font-light">
           Main page
         </a>
       </li>
