--- a/src/components/home/Blogs.astro
+++ b/src/components/home/Blogs.astro
@@ -1,14 +1,10 @@
 ---
 import Blog from "../Blog.astro";
+import Title from "../Title.astro";
 ---
 
 <section class="container pt-20 pb-30 flex flex-col gap-7.5">
-  <div class="flex items-center justify-center gap-3">
-    <div class="bg-[#A2A6CA] w-1.5 h-12.5"></div>
-    <h2 class="text-2xl font-bold tracking-wider uppercase leading-7.5">
-      BLOGS
-    </h2>
-  </div>
+  <Title title="Blogs" />
   <div class="grid lg:grid-cols-3 gap-x-9 gap-y-12.5">
     <Blog image="/src/assets/blog-1.jpg" />
     <Blog image="/src/assets/blog-2.jpg" />
