--- a/src/components/home/services/Single.astro
+++ b/src/components/home/services/Single.astro
@@ -23,7 +23,7 @@ const { title, description, image } = Astro.props;
     {description}
   </div>
   <a
-    href="#"
+    href="/service"
     class="text-[#363333] btn btn-text h-14 w-52.5 px-0 bg-white rounded-none text-base font-medium tracking-wider leading-7"
   >
     More...
