--- a/src/components/layouts/TopBar.astro
+++ b/src/components/layouts/TopBar.astro
@@ -12,20 +12,40 @@ import youtube from "/src/assets/social/youtube.svg";
   <div
     class="container flex items-center justify-center gap-6 lg:justify-end max-sm:flex-col"
   >
-    <div class="flex items-center gap-5">
-      <a href="https://www.facebook.com/" target="_blank">
+    <div class="flex items-center">
+      <a
+        href="https://www.facebook.com/"
+        target="_blank"
+        class="btn btn-circle btn-text [--btn-color:#FFF]"
+      >
         <Image src={facebook} alt="Facebook" loading="eager" />
       </a>
-      <a href="https://www.linkedin.com/" target="_blank">
+      <a
+        href="https://www.linkedin.com/"
+        target="_blank"
+        class="btn btn-circle btn-text [--btn-color:#FFF]"
+      >
         <Image src={linkedin} alt="LinkedIn" loading="eager" />
       </a>
-      <a href="https://www.twitter.com/" target="_blank">
+      <a
+        href="https://www.twitter.com/"
+        target="_blank"
+        class="btn btn-circle btn-text [--btn-color:#FFF]"
+      >
         <Image src={twitter} alt="Twitter" loading="eager" />
       </a>
-      <a href="https://www.instagram.com/" target="_blank">
+      <a
+        href="https://www.instagram.com/"
+        target="_blank"
+        class="btn btn-circle btn-text [--btn-color:#FFF]"
+      >
         <Image src={instagram} alt="Instagram" loading="eager" />
       </a>
-      <a href="https://www.youtube.com/" target="_blank">
+      <a
+        href="https://www.youtube.com/"
+        target="_blank"
+        class="btn btn-circle btn-text [--btn-color:#FFF]"
+      >
         <Image src={youtube} alt="Youtube" loading="eager" />
       </a>
     </div>
