--- a/src/components/layouts/Navbar.astro
+++ b/src/components/layouts/Navbar.astro
@@ -52,7 +52,7 @@ import chevronDownDark from "/src/assets/chevron-down-dark.svg";
           </li>
           <li>
             <a
-              href="#"
+              href="/what-we-do"
               class="text-xl leading-none uppercase hover:bg-transparent"
             >
               WHAT WE DO
