✨ feat(pages): add privacy, terms, faq pages and update footer links - 【feat】: Add new pages for privacy policy, terms and conditions, and FAQ to provide essential information to users - 【refactor】: Update the footer component to link to the newly created privacy, terms, and FAQ pages, improving site navigation and user experience. - 【refactor】: Changed div to article in article and service pages to improve HTML semantics

--- a/src/pages/article.astro
+++ b/src/pages/article.astro
@@ -43,7 +43,7 @@ import whatsapp from "/src/assets/social/whatsapp.svg";
         </ul>
       </nav>
     </div>
-    <div class="grid lg:grid-cols-3 pt-9 pb-12.5 gap-10">
+    <article class="grid lg:grid-cols-3 pt-9 pb-12.5 gap-10">
       <div>
         <Image src={blog6} alt="Blog" loading="eager" class="aspect-square" />
       </div>
@@ -93,7 +93,7 @@ import whatsapp from "/src/assets/social/whatsapp.svg";
           </div>
         </div>
       </div>
-    </div>
+    </article>
     <Title title="Other blogs" />
     <div class="grid lg:grid-cols-3 gap-x-9 gap-y-12.5 mt-9">
       <Blog image="/src/assets/blog-1.jpg" />
