--- a/src/components/layouts/Footer.astro
+++ b/src/components/layouts/Footer.astro
@@ -16,19 +16,21 @@ const year = new Date().getFullYear();
     >
       <ul class="flex flex-col gap-4 max-lg:items-center">
         <li><a href="/about" class="text-[#373636] text-lg">About us</a></li>
-        <li><a href="#" class="text-[#373636] text-lg">Privacy</a></li>
+        <li><a href="/privacy" class="text-[#373636] text-lg">Privacy</a></li>
       </ul>
       <ul class="flex flex-col gap-4 max-lg:items-center">
         <li>
           <a href="/what-we-do" class="text-[#373636] text-lg"> What we do </a>
         </li>
         <li>
-          <a href="#" class="text-[#373636] text-lg">Terms and conditions</a>
+          <a href="/terms" class="text-[#373636] text-lg">
+            Terms and conditions
+          </a>
         </li>
       </ul>
       <ul class="flex flex-col gap-4 max-lg:items-center">
         <li><a href="/blog" class="text-[#373636] text-lg">Blogs</a></li>
-        <li><a href="#" class="text-[#373636] text-lg">FAQ</a></li>
+        <li><a href="/faq" class="text-[#373636] text-lg">FAQ</a></li>
       </ul>
       <ul class="flex flex-col items-end gap-4 max-lg:items-center">
         <li>
