--- a/src/pages/service.astro
+++ b/src/pages/service.astro
@@ -43,7 +43,7 @@ import blog6 from "/src/assets/blog-6.jpg";
         </ul>
       </nav>
     </div>
-    <div class="grid lg:grid-cols-3 pt-9 pb-12.5 gap-10">
+    <article class="grid lg:grid-cols-3 pt-9 pb-12.5 gap-10">
       <div>
         <Image src={blog6} alt="Blog" loading="eager" class="aspect-square" />
       </div>
@@ -68,7 +68,7 @@ import blog6 from "/src/assets/blog-6.jpg";
           undoubtable source.
         </div>
       </div>
-    </div>
+    </article>
     <Title title="Other services" />
     <div class="grid lg:grid-cols-3 gap-x-9 gap-y-12.5 mt-9">
       <Single image="/src/assets/blog-1.jpg" />
