--- a/src/components/Blog.astro
+++ b/src/components/Blog.astro
@@ -31,8 +31,8 @@ const { image } = Astro.props;
   </div>
   <hr class="my-5 h-px bg-[#EFEFEF] border-0" />
   <div class="flex items-center justify-between">
-    <span class="text-[#A2A6CA] font-medium text-base tracking-[15%] leading-5"
-      >Read more...</span
-    ><Image src={arrow} alt="Arrow" />
+    <span class="text-[#A2A6CA] font-medium text-base tracking-[15%] leading-5">
+      Read more...
+    </span><Image src={arrow} alt="Arrow" />
   </div>
 </a>
